--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 db.driver={Драйвер к базе данных}
 db.url={строка подключения к базе данных}
 db.username={логин}
-db.password={пароль}
+db.password={}
